2010-04-09  Roland McGrath  <roland@redhat.com>

	* Makerules ($(common-objpfx)libc-abis.h): Depend on libc-abis.stamp.
	($(common-objpfx)libc-abis.stamp): New target, rule moved from
	libc-abis.h target.  Use a stamp file to avoid repeating no-op
	move-if-change on every run.

	* posix/Makefile (tst-chmod-ARGS): Pass $(objdir), not `pwd`.

2010-04-08  Ulrich Drepper  <drepper@redhat.com>

	[BZ #10915]
	* nscd/nscd_stat.c (struct statdata): Add reload_count field.
	(send_stats): Fill in reload_count.
	(receive_print_stats): Print reload_count.

	* sysdeps/unix/sysv/linux/getlogin_r.c (__getlogin_r_loginuid): When
	reading the loginuid file use a buffer which is always large enough.
	NUL-terminate the string.

	* malloc/malloc.c (_int_malloc): Return NULL if printing error message
	returns.

2010-04-07  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/i386/fallocate.c: Set errno on error.
	* sysdeps/unix/sysv/linux/i386/fallocate64.c: Likewise.

2010-04-08  Andreas Jaeger  <aj@suse.de>

	[BZ #10401]
	* math/s_cprojl.c (__cprojl): Fix implementation to follow C99
	standard.
	* math/s_cprojf.c (__cprojf): Likewise.
	* math/s_cproj.c (__cproj): Likewise.
	* sysdeps/ieee754/ldbl-128ibm/s_cprojl.c (__cprojl): Likewise.
	* math/libm-test.inc (cproj_test): Fix test.

2010-04-08  Roland McGrath  <roland@redhat.com>

	* Makerules (libc-abis): Variable removed.
	($(common-objpfx)libc-abis.h): Depend on Makerules too.
	Use automatic variables in commands.
	Depend on first libc-abis from $(sysdirs) or $(..).

2010-04-07  Ulrich Drepper  <drepper@redhat.com>

	* posix/bug-getopt1.c: New file.
	* posix/bug-getopt2.c: New file.
	* posix/bug-getopt3.c: New file.
	* posix/bug-getopt4.c: New file.
	* posix/bug-getopt5.c: New file.

2009-12-01  Eric Blake  <ebb9@byu.net>

	[BZ #11039]
	* posix/getopt.c (_getopt_internal_r): Skip optional - or + before
	checking lead byte of optstring for :.

	[BZ #11040]
	* posix/getopt.c (_getopt_internal_r): Reject '-;' as short